force-app/main/default/objects/ppmail__Mail_Sender__mdt/ppmail__Mail_Sender__mdt.object-meta.xml
<CustomObject>
    <description>Used to store information about mail senders, such as their name, email address, and whether they are active. This allows for centralized management of sender identities.</description>
    <label>Mail Sender</label>
    <pluralLabel>Mail Senders</pluralLabel>
</CustomObject>