force-app/main/default/objects/ppmail__Mail_Sender__mdt/fields/ppmail__Email__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Email__c</fullName>
    <description>The email address of the sender.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>