force-app/main/default/objects/ppmail__Mail_Sender__mdt/fields/ppmail__Name__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Name__c</fullName>
    <description>The name of the sender.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>