force-app/main/default/objects/ppmail__Mail_Sender__mdt/fields/ppmail__Reply_To_Name__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Reply_To_Name__c</fullName>
    <description>The name that will appear in the Reply-To field of the email.</description>
    <label>Reply To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>